[package]
name = "scroll_derive"
version = "0.5.0"
authors = ["m4b <m4b.github.io@gmail.com>"]
readme = "README.md"
keywords = ["derive", "macros", "pread", "pwrite", "trait"]
repository = "https://github.com/m4b/scroll_derive"
license = "MIT"
documentation = "https://docs.rs/scroll_derive"
description = "A macros 1.1 derive implementation for Pread and Pwrite"

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[dev-dependencies.scroll]
version = "0.5.0"
