[package]
name = "scroll_derive"
version = "0.9.4"
authors = ["m4b <m4b.github.io@gmail.com>"]
readme = "README.md"
keywords = ["derive", "macros", "pread", "pwrite", "bytes"]
repository = "https://github.com/m4b/scroll_derive"
license = "MIT"
documentation = "https://docs.rs/scroll_derive"
description = "A macros 1.1 derive implementation for Pread and Pwrite traits from the scroll crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.2"
quote = "0.6"
syn = "0.14"

[dev-dependencies.scroll]
version = "0.9"
